Added Liquor Store page

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -3,3 +3,9 @@
     grid-template-columns: 1fr;
     grid-template-rows: repeat(5, auto);
 }
+
+li .link {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
