--- a/src/style/Paralax.css
+++ b/src/style/Paralax.css
@@ -1,7 +1,6 @@
 .paralax {
     grid-row: 1;
-    position: fixed;
-    border: 1px solid blue;
+    position: absolute;
     width: 100%;
     height: 80%;
     background: url("../images/amie-johnson-1272491-unsplash.jpg") center no-repeat;
