--- a/src/components/Menu/MenuList.sass
+++ b/src/components/Menu/MenuList.sass
@@ -1,2 +1,12 @@
-.menu-list
-  margin-top: 100px
+.menu-list-background
+  background: url("../../images/menu-background.jpg") no-repeat center scroll
+  background-size: cover
+  height: 100vh
+  .menu-list
+    display: flex
+    width: 80%
+    background-color: rgba(0,0,0, 0.5)
+    color: white
+    margin: 100px auto 0 auto
+    ul
+      list-style: none
