refactored home background image

--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -4,7 +4,7 @@ main {
   width: 100vw;
 }
 main .background-image {
-  background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center fixed;
+  background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center scroll;
   background-size: cover;
   height: 80vh;
   padding: 0;
