--- a/src/components/pages/Home.sass
+++ b/src/components/pages/Home.sass
@@ -3,7 +3,7 @@ main
   margin: 0
   width: 100vw
   .background-image
-    background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center fixed
+    background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center scroll
     background-size: cover
     height: 80vh
     padding: 0
