--- a/src/components/Menu/MenuList.sass
+++ b/src/components/Menu/MenuList.sass
@@ -1,12 +1,15 @@
 .menu-list-background
   background: url("../../images/menu-background.jpg") no-repeat center scroll
   background-size: cover
-  height: 100vh
+  height: 150vh
   .menu-list
     display: flex
+    flex-wrap: wrap
     width: 80%
     background-color: rgba(0,0,0, 0.5)
     color: white
     margin: 100px auto 0 auto
     ul
       list-style: none
+      padding: 4px 7px
+      margin: 0
