--- a/src/components/Menu/MenuDetails.sass
+++ b/src/components/Menu/MenuDetails.sass
@@ -1,3 +1,5 @@
+$font-stack: 'Montserrat', sans-serif
+
 .menu-details-container
   background-color: rgba(0,0,0,0.7)
   color: white
@@ -5,9 +7,15 @@
   width: 90%
   margin: 10px auto
   padding: 7px .8rem
+  font-size: 0.9rem
   ul
     padding: 0
     list-style: none
-    text-align: left !important
-    li p
-      margin: 0
+    text-align: center !important
+    font-family: $font-stack
+    li
+      padding-bottom: 10px
+      p
+        margin: 0
+      p:nth-of-type(odd)
+        font-size: 10px
