--- a/src/components/Menu/MenuList.css
+++ b/src/components/Menu/MenuList.css
@@ -1,10 +1,11 @@
 .menu-list-background {
   background: url("../../images/menu-background.jpg") no-repeat center scroll;
   background-size: cover;
-  height: 100vh;
+  height: 150vh;
 }
 .menu-list-background .menu-list {
   display: flex;
+  flex-wrap: wrap;
   width: 80%;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
@@ -12,6 +13,8 @@
 }
 .menu-list-background .menu-list ul {
   list-style: none;
+  padding: 4px 7px;
+  margin: 0;
 }
 
 /*# sourceMappingURL=MenuList.css.map */
