--- a/src/components/Menu/MenuList.sass
+++ b/src/components/Menu/MenuList.sass
@@ -4,11 +4,12 @@
   height: 150vh
   .menu-list
     display: flex
+    justify-content: center
     flex-wrap: wrap
-    width: 80%
+    width: 96%
     background-color: rgba(0,0,0, 0.5)
     color: white
-    margin: 100px auto 0 auto
+    margin: 3.8125rem auto 0 auto
     ul
       list-style: none
       padding: 4px 7px
