--- a/src/components/Menu/MenuList.sass
+++ b/src/components/Menu/MenuList.sass
@@ -9,7 +9,8 @@
     width: 96%
     background-color: rgba(0,0,0, 0.5)
     color: white
-    margin: 3.8125rem auto 0 auto
+    margin: 3.7rem auto 0 auto
+    padding: 10px 0
     ul
       list-style: none
       padding: 4px 7px
