--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -1,9 +1,25 @@
-.contact-background
-  background-color: black
-  h1
-    padding-top: 70px
-    color: red
-    text-align: center
-    text-shadow: 2px 0 5px black
-    font-size: 2rem
+main
+  height: 100vh
+  .contact-background
+    background-color: black
+    height: 100vh
+    h1
+      padding-top: 70px
+      color: red
+      text-align: center
+      text-shadow: 2px 0 5px black
+      font-size: 2rem
+    .contact-info
+      color: white
+      p span
+        font-weight: bold
+        font-size: larger
+      p a
+        text-decoration: none
+        color: white
+    iframe
+      display: flex
+      width: 90%
+      height: 40vh
+      margin: auto
 
