--- a/src/components/Toolbar/toolbar.sass
+++ b/src/components/Toolbar/toolbar.sass
@@ -20,6 +20,8 @@
       display: flex
       li
         padding: 0 0.5rem
+        a
+          text-decoration: none
       li:hover, li:active
         color: purple
 
@@ -35,4 +37,5 @@
 @media screen and (max-width: 768px)
   .toolbar__navigation-items
     display: none
+
 
