--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -1,4 +1,4 @@
-main
+.contact-main
   height: 100vh
   .contact-background
     background-color: black
@@ -23,3 +23,12 @@ main
       height: 40vh
       margin: auto
 
+@media only screen and (min-width: 769px)
+  .contact-info
+    display: flex
+    justify-content: space-evenly
+    margin-bottom: 3rem
+    p
+      text-align: center
+  iframe
+    height: 50vh !important
