--- a/src/index.sass
+++ b/src/index.sass
@@ -1,9 +1,11 @@
+$font-stack: 'Montserrat', sans-serif
+
 html
+  font-family: $font-stack
   height: 100%
   margin: 0
   padding: 0
   body
-
     padding: 0
     margin: 0
     height: 100vh
