--- a/src/components/Menu/MenuList.css
+++ b/src/components/Menu/MenuList.css
@@ -1,7 +1,7 @@
 .menu-list-background {
   background: url("../../images/menu-background.jpg") no-repeat center scroll;
   background-size: cover;
-  height: 155vh;
+  height: 76rem;
 }
 .menu-list-background .menu-list {
   display: flex;
