--- a/src/components/pages/Home.sass
+++ b/src/components/pages/Home.sass
@@ -8,6 +8,11 @@ main
     height: 80vh
     padding: 0
     margin: 0
-  section
-    h2, p
+  .home-section
+    padding: 0 5px
+    h2
       text-align: center
+      font-size: 1.3rem
+    p
+      text-align: center
+
