--- a/src/components/pages/LiquorStore.sass
+++ b/src/components/pages/LiquorStore.sass
@@ -23,3 +23,7 @@ main
       margin: auto
       padding: 15px
       box-shadow: 2px 2px 5px rgba(0,0,0,0.8)
+
+@media only screen and (min-width: 769px)
+  main
+    min-height: unset
