--- a/src/components/sections/SectionOneHome.css
+++ b/src/components/sections/SectionOneHome.css
@@ -12,4 +12,15 @@
   text-align: justify;
 }
 
+@media only screen and (min-width: 769px) {
+  .background-image__section-1 {
+    height: 40rem;
+  }
+  .background-image__section-1 .section-1__text-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 /*# sourceMappingURL=SectionOneHome.css.map */
