--- a/src/components/sections/SectionOneHome.sass
+++ b/src/components/sections/SectionOneHome.sass
@@ -8,3 +8,11 @@
     color: white
     p
       text-align: justify
+
+@media only screen and (min-width: 769px)
+  .background-image__section-1
+    height: 40rem
+    .section-1__text-container
+      width: 50%
+      display: flex
+      flex-direction: column
