--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -21,4 +21,11 @@ main .home-section p {
   text-align: center;
 }
 
+@media only screen and (min-width: 769px) {
+  .background-image {
+    background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center fixed !important;
+    background-size: cover !important;
+  }
+}
+
 /*# sourceMappingURL=Home.css.map */
