--- a/src/components/pages/Home.sass
+++ b/src/components/pages/Home.sass
@@ -16,3 +16,7 @@ main
     p
       text-align: center
 
+@media only screen and (min-width: 769px)
+  .background-image
+    background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center fixed !important
+    background-size: cover !important
