--- a/src/components/Menu/MenuDetails.sass
+++ b/src/components/Menu/MenuDetails.sass
@@ -19,3 +19,15 @@ $font-stack: 'Montserrat', sans-serif
         margin: 0
       p:nth-of-type(odd)
         font-size: 10px
+
+@media only screen and (min-width: 769px)
+  .menu-details-wrapper__laptop
+    width: 60%
+    height: 100%
+    .menu-details-container
+      width: 90%
+      height: auto
+      margin: 5rem auto 0 auto
+      font-size: 1.3rem
+      ul li p:nth-of-type(odd)
+        font-size: 15px
