--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -1,22 +1,21 @@
 .contact-main
   height: 100vh
   .contact-background
-    background-color: black
     height: 100vh
     h1
       padding-top: 70px
       color: red
       text-align: center
       text-shadow: 2px 0 5px black
-      font-size: 2rem
+      font-size: 2.5rem
     .contact-info
-      color: white
+      color: black
       p span
         font-weight: bold
         font-size: larger
       p a
         text-decoration: none
-        color: white
+        color: black
     iframe
       display: flex
       width: 90%
