--- a/src/components/awards/Awards.sass
+++ b/src/components/awards/Awards.sass
@@ -1,59 +1,112 @@
-%award-positioning
+%award-positioning-mobile
   display: flex
   justify-content: left
   align-items: center
-  height: .5rem
-  grid-column: 2 / 5
-
+  grid-column: 1 / 5
+  height: 30px
+  padding-left: 5px
   img
-    width: 18%
-    margin: 10px 0
+    width: 12%
+    margin: 5px 0
   p
     color: white
-    font-size: 1.2rem
-    padding: 10px 5px
+    font-size: 1rem
+    padding: 5px
     //background-color: rgba(0,0,0,0.7)
 
 .background-image
   display: grid
-  grid-template-rows: repeat(6, auto)
-  grid-template-columns: repeat(7, 1fr)
+  grid-template-rows: repeat(10, auto)
+  grid-template-columns: repeat(4, 1fr)
   background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center scroll
   background-size: cover
-  height: 92vh
+  height: 90vh
   padding: 0
   margin: 0
   .award1
     grid-row: 3
-    @extend %award-positioning
+    @extend %award-positioning-mobile
   .award2
     grid-row: 4
-    @extend %award-positioning
+    @extend %award-positioning-mobile
   .award3
     grid-row: 5
-    @extend %award-positioning
+    @extend %award-positioning-mobile
 
   .award4
     grid-row: 6
-    @extend %award-positioning
+    @extend %award-positioning-mobile
 
   .award5
-    grid-row: 3
-    grid-column: 5 / 8
-    @extend %award-positioning
+    grid-row: 7
+    @extend %award-positioning-mobile
 
   .award6
-    grid-row: 4
-    grid-column: 5 / 8
-    @extend %award-positioning
+    grid-row: 8
+    @extend %award-positioning-mobile
 
   .award7
-    grid-row: 5
-    grid-column: 5 / 8
-    @extend %award-positioning
+    grid-row: 9
+    @extend %award-positioning-mobile
 
   .award8
-    grid-row: 6
-    grid-column: 5 / 8
-    @extend %award-positioning
+    grid-row: 10
+    @extend %award-positioning-mobile
+
+
+@media only screen and (min-width: 796px)
+  %award-positioning-laptop
+    display: flex
+    justify-content: left
+    align-items: center
+    height: .5rem
+    grid-column: 2 / 5
+
+    img
+      width: 18%
+      margin: 10px 0
+    p
+      color: white
+      font-size: 1.2rem
+      padding: 10px 5px
+      //background-color: rgba(0,0,0,0.7)
+
+  .background-image
+    display: grid
+    grid-template-rows: repeat(6, auto)
+    grid-template-columns: repeat(7, 1fr)
+    height: 91vh
+    .award1
+      grid-row: 3
+      @extend %award-positioning-laptop
+    .award2
+      grid-row: 4
+      @extend %award-positioning-laptop
+    .award3
+      grid-row: 5
+      @extend %award-positioning-laptop
+
+    .award4
+      grid-row: 6
+      @extend %award-positioning-laptop
+
+    .award5
+      grid-row: 3
+      grid-column: 5 / 8
+      @extend %award-positioning-laptop
+
+    .award6
+      grid-row: 4
+      grid-column: 5 / 8
+      @extend %award-positioning-laptop
+
+    .award7
+      grid-row: 5
+      grid-column: 5 / 8
+      @extend %award-positioning-laptop
+
+    .award8
+      grid-row: 6
+      grid-column: 5 / 8
+      @extend %award-positioning-laptop
 
