--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -3,6 +3,16 @@ main {
   margin: 0;
   width: 100vw;
 }
+main .background-image {
+  display: grid;
+  grid-template-rows: repeat(10, auto);
+  grid-template-columns: repeat(4, 1fr);
+  background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center scroll;
+  background-size: cover;
+  height: 90vh;
+  padding: 0;
+  margin: 0;
+}
 main .home-section {
   padding: 0 5px;
 }
