--- a/src/components/pages/Home.sass
+++ b/src/components/pages/Home.sass
@@ -2,6 +2,15 @@ main
   padding: 0
   margin: 0
   width: 100vw
+  .background-image
+    display: grid
+    grid-template-rows: repeat(10, auto)
+    grid-template-columns: repeat(4, 1fr)
+    background: url("../../images/amie-johnson-VJXLzQi5TlE-unsplash.jpg") no-repeat center scroll
+    background-size: cover
+    height: 90vh
+    padding: 0
+    margin: 0
   .home-section
     padding: 0 5px
     h2
