--- a/src/components/SideDrawer/SideDrawer.sass
+++ b/src/components/SideDrawer/SideDrawer.sass
@@ -5,7 +5,7 @@
   position: fixed
   top: 0
   left: 0
-  width: 60%
+  width: 65%
   max-width: 300px
   z-index: 200
   transform: translateX(-100%)
@@ -15,8 +15,8 @@
     list-style: none
     display: flex
     flex-direction: column
-    justify-content: center
     text-decoration: none
+    padding: 5rem 23px
     li
       font-size: 2rem
       margin: 1rem 0
