--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -11,12 +11,15 @@
   text-shadow: 2px 0 5px black;
   font-size: 2.5rem;
 }
-.contact-main .contact-background .contact-info {
-  color: black;
+.contact-main .contact-background .contact-info p {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .contact-main .contact-background .contact-info p span {
   font-weight: bold;
-  font-size: larger;
+  font-size: 1.5rem;
+  text-align: center;
 }
 .contact-main .contact-background .contact-info p a {
   text-decoration: none;
@@ -25,7 +28,7 @@
 .contact-main .contact-background iframe {
   display: flex;
   width: 90%;
-  height: 40vh;
+  height: 33vh;
   margin: auto;
 }
 
@@ -33,14 +36,23 @@
   .contact-info {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 3rem;
   }
   .contact-info p {
     text-align: center;
   }
+  .contact-info p span {
+    font-weight: bold;
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .contact-info p span p a {
+    text-decoration: none;
+    color: black;
+  }
 
   iframe {
     height: 50vh !important;
+    margin-bottom: 3rem !important;
   }
 }
 
