--- a/src/components/pages/Home.sass
+++ b/src/components/pages/Home.sass
@@ -18,6 +18,8 @@ main
       font-size: 1.5rem
     p
       text-align: center
+      width: 80%
+      margin: 0 auto 20px auto
 
 @media only screen and (min-width: 769px)
   .background-image
