--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -2,7 +2,7 @@
   height: 100vh;
 }
 .contact-main .contact-background {
-  height: 120vh;
+  height: 100vh;
 }
 .contact-main .contact-background h1 {
   padding-top: 70px;
@@ -28,7 +28,7 @@
 .contact-main .contact-background iframe {
   display: flex;
   width: 90%;
-  height: 33vh;
+  height: 40%;
   margin: auto;
 }
 
