--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -3,6 +3,7 @@ footer
     text-align: center
     p span
       font-weight: bold
+      font-size: larger
 
   .footer__info
     background-color: black
