--- a/src/components/Menu/MenuList.sass
+++ b/src/components/Menu/MenuList.sass
@@ -7,7 +7,7 @@
     justify-content: center
     flex-wrap: wrap
     width: 96%
-    background-color: rgba(0,0,0, 0.7)
+    background-color: rgba(0,0,0, 0.8)
     color: white
     margin: 3.7rem auto 0 auto
     padding: 10px 0
@@ -15,6 +15,7 @@
       list-style: none
       padding: 4px 7px
       margin: 0
+
 
 @media only screen and (min-width: 769px)
   .menu-list-background
@@ -29,3 +30,4 @@
         li
           padding: 7px 0
           cursor: pointer
+          margin: 0 27px
