--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -8,7 +8,7 @@
   padding-top: 70px;
   color: red;
   text-align: center;
-  text-shadow: 2px 0 5px black;
+  text-shadow: 1px 1px 2px black;
   font-size: 2.5rem;
 }
 .contact-main .contact-background .contact-info p {
