--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -6,7 +6,7 @@
       padding-top: 70px
       color: red
       text-align: center
-      text-shadow: 2px 0 5px black
+      text-shadow: 1px 1px 2px black
       font-size: 2.5rem
     .contact-info
       p
