--- a/src/components/pages/LiquorStore.css
+++ b/src/components/pages/LiquorStore.css
@@ -12,7 +12,7 @@ main .liquor-store-background h1 {
   padding-top: 70px;
   color: red;
   text-align: center;
-  text-shadow: 2px 0 5px black;
+  text-shadow: 1px 1px 2px black;
   font-size: 2rem;
 }
 main .liquor-store-background .store__text-container {
@@ -20,7 +20,7 @@ main .liquor-store-background .store__text-container {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   color: white;
   width: 80%;
   margin: auto;
