--- a/src/components/pages/LiquorStore.sass
+++ b/src/components/pages/LiquorStore.sass
@@ -10,14 +10,14 @@ main
       padding-top: 70px
       color: red
       text-align: center
-      text-shadow: 2px 0 5px black
+      text-shadow: 1px 1px 2px black
       font-size: 2rem
     .store__text-container
       display: flex
       flex-direction: column
       justify-content: center
       align-content: center
-      background-color: rgba(0,0,0,0.7)
+      background-color: rgba(0,0,0,0.8)
       color: white
       width: 80%
       margin: auto
