Bug fixed: contact page mobile / iframe overlapping hours section

--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -53,12 +53,14 @@
   }
 
   .iframe-container {
+    width: 90%;
     height: 50vh !important;
+    margin: auto;
   }
   .iframe-container iframe {
-    width: 100%;
-    height: 50vh;
-    margin: auto;
+    width: 100% !important;
+    height: 50vh !important;
+    margin: auto !important;
   }
 }
 
