--- a/src/components/sections/SectionSpecialsHome.css
+++ b/src/components/sections/SectionSpecialsHome.css
@@ -28,4 +28,19 @@
   font-size: 14px;
 }
 
+@media only screen and (min-width: 769px) {
+  .home-specials article {
+    border: 1px solid lightgrey;
+    border-radius: 20px;
+    box-shadow: 2px 2px 4px white;
+    width: 60%;
+    margin: auto;
+    padding-bottom: 10px;
+  }
+  .home-specials article .specials-items {
+    width: 60%;
+    margin: auto;
+  }
+}
+
 /*# sourceMappingURL=SectionSpecialsHome.css.map */
