--- a/src/components/Menu/MenuDetails.sass
+++ b/src/components/Menu/MenuDetails.sass
@@ -15,10 +15,14 @@ $font-stack: 'Montserrat', sans-serif
     font-family: $font-stack
     li
       padding-bottom: 10px
+      .price
+        font-size: 0.9rem !important
       p
         margin: 0
-      p:nth-of-type(odd)
+      p:nth-of-type(odd), .extra-price
         font-size: 10px
+
+
 
 @media only screen and (min-width: 769px)
   .menu-details-wrapper__laptop
